--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -39,6 +39,12 @@
                   <td>@p.getDescription</td>
                   <td>@p.getStock</td>
                   <td>&euro; @("%.2f".format(p.getPrice))</td>
+
+                    <!---Edit product button--->
+                        <td>
+                            <a href="@routes.HomeController.updateProduct(p.getId)" class="btn-xs btn-danger">
+                                <span class="glyphicon glyphicon-pencil"></span></a>
+                        </td>
                   <!-- Delete product button -->
                   <td>
                       <a href="@routes.HomeController.deleteProduct(p.getId)" class="btn-xs btn-danger"
